# IGI-3004

./: .gitignore  Doxyfile  Makefile  meson.build
TD1/: Makefile  gestionFichiersw.cpp  gestionFichiersw.hpp  test2a.cpp  test2b.cpp  test2c.cpp  test2d.cpp  test2e.cpp  test3a.cpp  test3b.cpp  test3c.cpp
TD2/: Makefile  gestionFichiersw.hpp  procutils.hpp  testIB1.cpp  testIB2.cpp  testIB3.cpp  testIIB.cpp  testIII1.cpp  testIII2.cpp  testIII3.cpp
TD3/: Makefile  gestionFichiersw.cpp  pipe.cpp  pipe.hpp  testI2.cpp  testIII.cpp
benchmarks/: .clang  gestion_fichiers.cpp  meson.build  pipe.cpp
include/: gestion-fichiers.hpp  pipe.hpp  procutils.hpp
lib/: Makefile
src/TD1/: Makefile  meson.build  test2a.cpp  test2b.cpp  test2c.cpp  test2d.cpp  test2e.cpp  test3a.cpp  test3b.cpp  test3c.cpp
src/TD2/: .clang  Makefile  fichierTest.txt  meson.build  testIB1.cpp  testIB2.cpp  testIB3.cpp  testIIB.cpp  testIII1.cpp  testIII2.cpp  testIII3.cpp
src/TD3/: .clang  Makefile  almostSecret.txt  meson.build  testI2.cpp  testIII.cpp
src/TD4/: .clang  Makefile  meson.build  testIIb.cpp  testIa.cpp
src/TD5/: .clang  meson.build  testI1.cpp  testI2.cpp
src/gestion-fichiers/: Makefile  gestion-fichiers.cpp  gestion-fichiers.hpp  ifile.cpp  ifile.hpp  ifile.tcc  meson.build  ofile.cpp  ofile.hpp  ofile.tcc  utility.hpp
src/memory/: memory.hpp  meson.build  unique_ptr.hpp  unique_ptr.tcc  utility.hpp
src/pipe/: .clang  Makefile  meson.build  pipe.cpp  pipe.hpp
src/procutils/: Makefile  meson.build  procutils.cpp  procutils.hpp
src/semaphore/: meson.build  semaphore.cpp  semaphore.hpp
src/thread/: invoke.hpp  meson.build  thread.cpp  thread.hpp  thread.tcc
tests/: .clang  gestion_fichiers_testing.cpp  memory_testing.cpp  meson.build  pipe_testing.cpp  semaphore_testing.cpp  thread_testing.cpp
