executable('test2a', 'test2a.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2b', 'test2b.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2c', 'test2c.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2d', 'test2d.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2e', 'test2e.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test3a', 'test3a.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test3b', 'test3b.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test3c', 'test3c.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)

# vim: ft=cmake
