executable('test2a.bin', 'test2a.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2b.bin', 'test2b.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2c.bin', 'test2c.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2d.bin', 'test2d.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test2e.bin', 'test2e.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test3a.bin', 'test3a.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test3b.bin', 'test3b.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)
executable('test3c.bin', 'test3c.cpp', include_directories: gestion_fichiers_inc, link_with: libgestion_fichiers)

# vim: ft=cmake
