executable('testIB1', 'testIB1.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIB2', 'testIB2.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIB3', 'testIB3.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIIB', 'testIIB.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIII1', 'testIII1.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIII2', 'testIII2.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIII3', 'testIII3.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])

# vim: ft=cmake
