executable('testIB1.bin', 'testIB1.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIB2.bin', 'testIB2.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIB3.bin', 'testIB3.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIIB.bin', 'testIIB.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIII1.bin', 'testIII1.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIII2.bin', 'testIII2.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])
executable('testIII3.bin', 'testIII3.cpp', include_directories: [gestion_fichiers_inc, procutils_inc], link_with: [libgestion_fichiers, libprocutils])

# vim: ft=cmake
