executable('testIa.bin', 'testIa.cpp', include_directories: [gestion_fichiers_inc, semaphore_inc], link_with: [libgestion_fichiers, libsemaphore], dependencies: thread_dep)
executable('testIIb.bin', 'testIIb.cpp', include_directories: [gestion_fichiers_inc, semaphore_inc], link_with: [libgestion_fichiers, libsemaphore], dependencies: thread_dep)

# vim: ft=cmake
